# Finance_app

./: CMakeLists.txt  README.md
analytics/: GroupByCategoriesStrategy.h  IAnalyticsStrategy.h  IncomeExpenseDifferenceStrategy.h
commands/: CreateAccountCommand.h  GenerateReportCommand.h  ICommand.h  RemoveAccountCommand.h  TimingDecorator.h  UpdateAccountNameCommand.h
core/: IObserver.h  ISubject.h
domain/: BankAccount.cpp  BankAccount.h  Category.cpp  Category.h  Operation.cpp  Operation.h  OperationBuilder.cpp  OperationBuilder.h
facades/: AccountFacade.cpp  AccountFacade.h  AnalyticsFacade.cpp  AnalyticsFacade.h  CategoryFacade.cpp  CategoryFacade.h  IAccountFacade.h  IAnalyticsFacade.h  ICategoryFacade.h  IOperationFacade.h  OperationFacade.cpp  OperationFacade.h
repository/: BankAccountRepository.cpp  BankAccountRepository.h  CategoryRepository.cpp  CategoryRepository.h  IRepository.h  OperationRepository.cpp  OperationRepository.h
services/: DomainEntityFactory.cpp  DomainEntityFactory.h  IIdGenerator.h  OperationService.cpp  OperationService.h  SequentialIdGenerator.h
src/: main.cpp
src/analytics/: GroupByCategoriesStrategy.h  IAnalyticsStrategy.h  IncomeExpenseDifferenceStrategy.h
src/commands/: CreateAccountCommand.h  GenerateReportCommand.h  ICommand.h  RemoveAccountCommand.h  TimingDecorator.h  UpdateAccountNameCommand.h
src/core/: IObserver.h  ISubject.h
src/domain/: BankAccount.cpp  BankAccount.h  Category.cpp  Category.h  Operation.cpp  Operation.h  OperationBuilder.cpp  OperationBuilder.h
src/facades/: AccountFacade.cpp  AccountFacade.h  AnalyticsFacade.cpp  AnalyticsFacade.h  CategoryFacade.cpp  CategoryFacade.h  IAccountFacade.h  IAnalyticsFacade.h  ICategoryFacade.h  IOperationFacade.h  OperationFacade.cpp  OperationFacade.h
src/repository/: BankAccountRepository.cpp  BankAccountRepository.h  CategoryRepository.cpp  CategoryRepository.h  IRepository.h  OperationRepository.cpp  OperationRepository.h
src/services/: DomainEntityFactory.cpp  DomainEntityFactory.h  IIdGenerator.h  OperationService.cpp  OperationService.h  (+1 more)
storage/: IStorage.h  InMemoryStorage.cpp  InMemoryStorage.h
ui/: ConsoleUI.cpp  ConsoleUI.h  InputHelper.h
(+6 files in other folders)
